Fixed the css and activities alignment

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,11 +17,17 @@ body {
 	font-family: 'Poppins', sans-serif;
 	height: 100vh;
 	background-color: var(--Pllt3);
-	margin-top: 85px;
-	margin-bottom: 50px;
+	/* margin-top: 85px; */
+	/* margin-bottom: 50px; */
 	padding-top: 10px;
-	padding-bottom: 50px;
+	/* padding-bottom: 50px; */
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+  width: 100%;
 	color: var(--Pllt1);
+  top: 100px;
+  position: fixed;
 }
 
 a {
@@ -51,26 +57,29 @@ h3 {
 
 .container {
 	width: 100%;
-	/* max-width: 960px; */
+	max-width: 960px;
 	height: 100vh;
 	margin: 0 auto;
 	padding: 10px 10px;
+  padding-bottom: 150px;
 	/* text-align: center; */
 	/* display: block; */
 	/* position: relative; */
+  overflow-y: auto;
+  height:'100px';
 }
 
 .header {
+	width: 100%;
+	padding: 15px 20px 10px 20px;
+	margin-bottom: 20px;
 	background-color: var(--Pllt1);
 	display: flex;	
 	justify-content: space-between;
 	align-items: center;
-	padding: 15px 20px 10px 20px;
 	border-bottom: 1px solid var(--Pllt4);
-	margin-bottom: 20px;
 	position: fixed;
 	top: 0;
-	width: 100%
 }
 
 
@@ -300,8 +309,11 @@ h3 {
 
 .activity,
 .activity-headings {
+  overflow-y: auto;
+  height:'350px';
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  /* grid-template-columns: repeat(4, 1fr); */
+  grid-template-columns: 1fr 5fr 1.5fr;
   gap: 20px;
   justify-content: space-between;
   align-items: center;
@@ -310,6 +322,18 @@ h3 {
   padding: 10px 15px;
   border-radius: 5px;
   text-align: center;
+}
+
+.activity-left {
+  align-items: left;  
+}
+
+.activity-mid {
+  text-align: left;  
+}
+
+.activity-right {
+  align-items: right;  
 }
 
 .activity-headings {
@@ -373,6 +397,8 @@ h3 {
   border: 1px #ccc solid;
   padding: 10px 15px;
   border-radius: 5px;
+  overflow-y: auto;
+  /* height:'350px'; */
 }
 
 .note {
